--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "require": "^2.4.20",
     "rxjs": "^6.0.0",
+    "sort-array": "^2.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
